--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,11 @@ Content
 {% endblock content %}
 
 <!-- Для Django важно чтоб JS скрипты в базовом шаблоне подключались после контейнера "body" -->
-<!--использование jinja2 лока js не обязательно -->
-<!--Из этой библиотеки я использую объект Cookies, чтоб получить токен из куков пользователя который отправил Django в ответ запрос-->
+<!--использование jinja2 блока js не обязательно -->
+<!--Из этой библиотеки я использую объект Cookies, чтоб получить csrf токен из куков пользователя который отправил Django в ответ на запрос-->
 <script src="//cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
 <script>
+    // получаю токен...
     const csrftoken = Cookies.get('csrftoken');
     // Данный скрипт не требуется т.к. я использую JQuery AJAX запросы где $(document).ready(function () { .ajax код  })
     // самовызывающаяся анонимная функция jQuery, которая выполняется после того, как DOM-дерево полностью загружено и готово к взаимодействию..
