--- a/mainapp/templates/mainapp/include/index.html
+++ b/mainapp/templates/mainapp/include/index.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
 {% load static %}
 {% block style %}
 <link rel="stylesheet" href="{% static 'css/mainapp/mainapp.css' %}">
@@ -8,6 +7,6 @@ Home
 {% endblock title %}
 {% block content %}
 <body>
-    <h1>Hello world</h1>
+    <h1>Include/Hello world</h1>
 </body>
 {% endblock content %}
