ORM base, transaction atomic, middleware handler

--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -2,6 +2,10 @@
 {% load static %}
 
 {% block container %}
+
+{% if error %}
+  <h2 class="error-message">{{ error }}</h2>
+{% endif %}
     <div class="slider">
         {% include 'mainapp/includes/inc__main_menu.html' %}
         <div class="text-slider">
