--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -1,50 +1,70 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>{{ page_title|default:"главная"|title }}</title>
     {% block css %}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/error_messages.css' %}">
-    {% endblock %}
-    {% block js %}
-    {% endblock %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/error_messages.css' %}">
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Chart.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.all.min.css' %}">
+    {% endblock css %}
 </head>
 
 <body>
-<div class="container">
+    {% include 'includes/messages.html' %}
     {% block container %}
-    {% endblock %}
-
-    <div class="clr"></div>
-
-</div>
-<div class="footer">
-    <div class="clearfix">
-        <div class="text-footer">
-            <h3>контакты</h3>
+    {% endblock container %}
+    {% block footer %}
+    <div class="footer">
+        <div class="clearfix">
+            <div class="text-footer">
+                <h3>контакты</h3>
+            </div>
+            <div class="text-footer">
+                <h3>расчетать кредит</h3>
+            </div>
+            <div class="text-footer clearfix">
+                <h3>Оставайтесь на связи</h3>
+                <p>Подписаться на новости и рассылки</p>
+                <form>
+                    <input type="email" name="email" placeholder="ваш email">
+                    <a href="#"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
+                </form>
+            </div>
         </div>
-        <div class="text-footer">
-            <h3>расчетать кредит</h3>
+        <p class="small">&copy; StanleyIG</p>
+        <div class="social">
+            <a href="#" class="social1"></a>
+            <a href="#" class="social2"></a>
+            <a href="#" class="social3"></a>
+            <a href="#" class="social4"></a>
         </div>
-        <div class="text-footer clearfix">
-            <h3>Оставайтесь на связи</h3>
-            <p>Подписаться на новости и рассылки</p>
-            <form>
-                <input type="email" name="email" placeholder="ваш email">
-                <a href="#"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
-            </form>
-        </div>
+        <p class="small">Положения &amp; Условия / Конфиденциальность &amp; Cookies</p>
     </div>
-    <p class="small">&copy; StanleyIG</p>
-    <div class="social">
-        <a href="#" class="social1"></a>
-        <a href="#" class="social2"></a>
-        <a href="#" class="social3"></a>
-        <a href="#" class="social4"></a>
-    </div>
-    <p class="small">Положения &amp; Условия / Конфиденциальность &amp; Cookies</p>
-</div>
+    {% endblock footer %}
 </body>
+{% block js %}
+<script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/Chart.min.js' %}"></script>
+<script src="{% static 'js/fontawesome.all.min.js' %}"></script>
+{% endblock js %}
+<script>
+    $(document).ready(function () {
+
+        {% if messages %}
+        // Toasts
+        $(".toast").toast({ delay: 5000 });
+        $(".toast").toast("show");
+        {% endif %}
+
+    });
+</script>
+</html>
