--- a/authapp_custom/templates/authapp_custom/register.html
+++ b/authapp_custom/templates/authapp_custom/register.html
@@ -22,8 +22,8 @@
             <div id="div_id_username" class="form-group"> <label for="id_username" class=" requiredField">
                     Username<span class="asteriskField">*</span> </label>
                 <div class=""> <input type="text" name="username" maxlength="150"
-                        class="textinput textInput form-control" required="" id="id_username"> 
-                    </div>
+                        class="textinput textInput form-control" required="" id="id_username">
+                </div>
             </div>
             <div id="div_id_password1" class="form-group"> <label for="id_password1" class=" requiredField">
                     Password<span class="asteriskField">*</span> </label>
@@ -66,7 +66,8 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-danger btn-block">Зарегистрироваться</button>
+            <button type="submit" class="btn btn-danger btn-block" style="padding: 10px;
+            border: 1px solid #ccc;">Зарегистрироваться</button>
         </form>
     </div>
 </div>
