--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -1,7 +1,7 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block container %}
-<div class="container">
+<div class="main-container">
     <div class="hero">
         {% include 'mainapp/includes/inc__main_menu.html' %}
         <h1>наши контакты</h1>
