--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -1,7 +1,7 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block container %}
-<div class="container">
+<div class="main-container">
     <div class="hero-white">
         {% include 'mainapp/includes/inc__main_menu.html' %}
     </div>
