--- a/authapp_custom/templates/authapp_custom/login.html
+++ b/authapp_custom/templates/authapp_custom/login.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+    {% include 'includes/messages.html' %}
     <div class="h-100 d-flex align-items-center justify-content-center"
         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
         <div class="text-center">
@@ -76,6 +76,7 @@
         $(document).ready(function () {
 
             {% if messages %}
+            // console.log('message')
             // Toasts
             $(".toast").toast({ delay: 5000 });
             $(".toast").toast("show");
