--- a/authapp_custom/templates/authapp_custom/customuser_form.html
+++ b/authapp_custom/templates/authapp_custom/customuser_form.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block css %}
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> -->
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/Chart.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/fontawesome.all.min.css' %}">
@@ -37,14 +38,21 @@
       {{ form|crispy }}
       <small>* обязательные поля для ввода</small>
       <!--<button type="submit" class="btn btn-danger btn-block" style="padding:8px;">-->
-      <button type="submit" class="custombtn-clear-social">
-        {% if user.is_anonymous %}
-        Зарегистрироваться
-        {% else %}
-        Сохранить
-        {% endif %}
-      </button>
-
+      <div class="btn-group btn-block" role="group">
+        <button type="submit" class="custombtn-save-social">
+          {% if user.is_anonymous %}
+          Зарегистрироваться
+          {% else %}
+          Сохранить
+          {% endif %}
+        </button>
+        <!-- <a href="{% url 'mainapp:index' %}" type="button" class="custombtn-main-social">
+          На главную
+        </a> -->
+        <button type="button" onclick="location.href='{% url 'mainapp:index' %}'"   class="custombtn-main-social">
+          На главную
+        </button>
+      </div>
     </form>
   </div>
 </div>
