--- a/mainapp/templates/mainapp/includes/inc__main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc__main_menu.html
@@ -1,4 +1,4 @@
-<div class="header clearfix">
+<div class="clearfix">
     <a href="{% url 'mainapp:index' %}" class="logo"></a>
     <ul class="menu">
         <li>
@@ -32,6 +32,8 @@
         </a>
         {% endif %}
     </ul>
-    <a href="#" class="search"></a>
-    <a href="#" class="basket"></a>
+    <div class="search-menu">
+        <a href="#" class="search"></a>
+        <a href="#" class="basket"></a>
+    </div>
 </div>
