--- a/mainapp/templates/mainapp/includes/inc__main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc__main_menu.html
@@ -34,6 +34,7 @@
     </ul>
     <div class="search-menu">
         <a href="#" class="search"></a>
-        <a href="#" class="basket"></a>
+        <!-- <a href="#" class="basket"></a> -->
+        <a href="{% url 'basket:index' %}" class="basket fa-shopping-basket"></a>
     </div>
 </div>
