--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -7,7 +7,8 @@
     </div>
 
     <div class="details">
-        <div class="links clearfix">
+        {% include 'mainapp/includes/inc__catalog_menu.html' %}
+        <!-- <div class="links clearfix">
             <ul class="links-menu">
                 {% for category in categories %}
                     <li>
@@ -17,7 +18,7 @@
                     </li>
                 {% endfor %}
             </ul>
-        </div>
+        </div> -->
 
         <div class="details-products">
             <div class="details-slider">
